; ModuleID = '/home/carl/AnghaBench/php-src/sapi/phpdbg/extr_phpdbg_help.c_phpdbg_do_help_cmd.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/phpdbg/extr_phpdbg_help.c_phpdbg_do_help_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"overview!\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@SUCCESS = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [40 x i8] c"\0Arequested help page could not be found\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @phpdbg_do_help_cmd(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = call i8* @get_help(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @pretty_print(i8* %7)
  br label %26

9:                                                ; preds = %1
  %10 = load i8*, i8** %2, align 8
  %11 = call i8* @get_help(i8* %10)
  store i8* %11, i8** %3, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %9
  %15 = load i8*, i8** %3, align 8
  %16 = call i64 @memcmp(i8* %15, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i32 1)
  %17 = load i64, i64* @SUCCESS, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %14, %9
  %20 = call i8* @get_help(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %21 = call i32 @pretty_print(i8* %20)
  %22 = call i32 @pretty_print(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.2, i64 0, i64 0))
  br label %26

23:                                               ; preds = %14
  %24 = load i8*, i8** %3, align 8
  %25 = call i32 @pretty_print(i8* %24)
  br label %26

26:                                               ; preds = %23, %19, %6
  ret void
}

declare dso_local i32 @pretty_print(i8*) #1

declare dso_local i8* @get_help(i8*) #1

declare dso_local i64 @memcmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
